--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>계절별 한국 관광 홈페이지</title>
 </head>
 <body>
-    <div>계절별 한국 관광 홈페이지</div>
+    <div>This is master</div>
+    <div>추가 내용입니다.</div>
 </body>
 </html>
