--- a/winter.html
+++ b/winter.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>계절별 한국 관광 홈페이지</title>
+    <title>겨울</title>
   </head>
-  <body>
-    <div></div>
-  </body>
+  <body></body>
 </html>
