--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>계절별 한국 관광 홈페이지</title>
+    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <div></div>
+    <header></header>
+    <footer></footer>
   </body>
 </html>
