--- a/autumn.html
+++ b/autumn.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>가을</title>
-    <link rel="stylesheet" href="./style/autumn.css" />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body>
-    <div class="header">안녕하세요</div>
-    <div class="footer"></div>
-  </body>
+  <body></body>
 </html>
