--- a/index.html
+++ b/index.html
@@ -8,7 +8,45 @@
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <header></header>
-    <footer></footer>
+    <header>
+      <div class="jm-topNav">
+        <div class="jm-topNavMenu">
+          <ul>
+            <li><a href="#">spring</a></li>
+            <li><a href="#">summer</a></li>
+            <li><a href="#">autumn</a></li>
+            <li><a href="#">winter</a></li>
+          </ul>
+          <ul>
+            <li class="jm-mainMenuBtn">햄버거바</li>
+          </ul>
+        </div>
+
+        <div class="jm-mainImgBox">
+          <ul class="jm-mainImgs">
+            <li class="jm-mainImg">이미지 사진1</li>
+            <li class="jm-mainImg">이미지 사진2</li>
+            <li class="jm-mainImg">이미지 사진3</li>
+          </ul>
+          <div class="jm-mainPrevBtn">PREV</div>
+          <div class="jm-mainNextBtn">RIGHT</div>
+          <ul class="jm-pepleIcon">
+            <li class="jm-createTour">
+              <ul>
+                <li>사람이미지</li>
+                <li>내용</li>
+              </ul>
+            </li>
+            <li class="jm-groupTour">
+              <ul>
+                <li>사람이미지</li>
+                <li>내용</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <script src="./js/main.js"></script>
   </body>
 </html>
