main add develop

--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
             <li><a href="#">winter</a></li>
           </ul>
           <ul>
-            <li class="jm-mainMenuBtn">햄버거바</li>
+            <li class="jm-mainMenuBtn"></li>
           </ul>
         </div>
 
         <div class="jm-mainImgBox">
           <ul class="jm-mainImgs">
-            <li class="jm-mainImg">이미지 사진1</li>
-            <li class="jm-mainImg">이미지 사진2</li>
-            <li class="jm-mainImg">이미지 사진3</li>
+            <li class="jm-mainImg on"></li>
+            <li class="jm-mainImg"></li>
+            <li class="jm-mainImg"></li>
+            <li class="jm-mainImg"></li>
           </ul>
-          <div class="jm-mainPrevBtn">PREV</div>
-          <div class="jm-mainNextBtn">RIGHT</div>
+          <div class="jm-mainPrevBtn"></div>
+          <div class="jm-mainNextBtn"></div>
           <ul class="jm-pepleIcon">
             <li class="jm-createTour">
               <ul>
