Modifying the Main Page Content

--- a/index.html
+++ b/index.html
@@ -34,14 +34,20 @@
           <ul class="jm-pepleIcon">
             <li class="jm-createTour">
               <ul>
-                <li>사람이미지</li>
-                <li>내용</li>
+                <li><img src="./img/icon/mainPerson.png" alt="" /></li>
+                <li class="jm-createTour-intro">
+                  <span>private tour</span>
+                  <span>혼자 여행 계획 중이신가요?</span>
+                </li>
               </ul>
             </li>
             <li class="jm-groupTour">
               <ul>
-                <li>사람이미지</li>
-                <li>내용</li>
+                <li><img src="./img/icon/mainPeple.png" alt="" /></li>
+                <li class="jm-createTour-intro">
+                  <span> group tour </span
+                  ><span> 함께 여행을 떠나실 계획이신가요? </span>
+                </li>
               </ul>
             </li>
           </ul>
