--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
           </div>
           <!-- 이벤트 및 축제 내용 -->
           <div class="hi-seasonEnf-txtB">
-            <div class="hi-seasonEnf-txtTop">신나는 여름  축제</div>
-            <div class="hi-seasonEnf-txtName">2019<br>SUMMER FESTIVAL</div>
+            <div class="hi-seasonEnf-txtTop">신나는 여름 축제</div>
+            <div class="hi-seasonEnf-txtName">2019<br />SUMMER FESTIVAL</div>
             <div class="hi-seasonEnf-term">2019.07.01 - 2019.07.20</div>
             <div class="hi-seasonEnf-ex">
-              뜨거운 여름, 시원한 즐거움이 가득한 축제!<br>
+              뜨거운 여름, 시원한 즐거움이 가득한 축제!<br />
               함께여서 더 즐거운 순간들로 가득한 여름 밤을 만끽해보세요!
             </div>
           </div>
