--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 구글폰트 start -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=IBM+Plex+Sans+KR&family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=IBM+Plex+Sans+KR&family=Rosarivo:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <!-- 구글폰트 end -->
     <title>계절별 한국 관광 홈페이지</title>
     <link rel="stylesheet" href="./style/main.css" />
@@ -31,33 +34,20 @@
 
         <div class="jm-mainImgBox">
           <ul class="jm-mainImgs">
-            <li class="jm-mainImg on"></li>
-            <li class="jm-mainImg"></li>
-            <li class="jm-mainImg"></li>
-            <li class="jm-mainImg"></li>
+            <li class="jm-mainImgFc"></li>
+            <li class="jm-mainImg">
+              <div class="jm-mainImg-content">내용을 입력하세요</div>
+            </li>
+            <li class="jm-mainImg">
+              <div class="jm-mainImg-content">내용을 입력하세요</div>
+            </li>
+            <li class="jm-mainImg">
+              <div class="jm-mainImg-content">내용을 입력하세요</div>
+            </li>
+            <li class="jm-mainImg">
+              <div class="jm-mainImg-content">내용을 입력하세요</div>
+            </li>
           </ul>
-          <div class="jm-mainPrevBtn"></div>
-          <div class="jm-mainNextBtn"></div>
-          <!-- <ul class="jm-pepleIcon">
-            <li class="jm-createTour">
-              <ul>
-                <li><img src="./img/icon/mainPerson.png" alt="" /></li>
-                <li class="jm-createTour-intro">
-                  <span>private tour</span>
-                  <span>혼자 여행 계획 중이신가요?</span>
-                </li>
-              </ul>
-            </li>
-            <li class="jm-groupTour">
-              <ul>
-                <li><img src="./img/icon/mainPeple.png" alt="" /></li>
-                <li class="jm-createTour-intro">
-                  <span> group tour </span
-                  ><span> 함께 여행을 떠나실 계획이신가요? </span>
-                </li>
-              </ul>
-            </li>
-          </ul> -->
         </div>
       </div>
     </header>
@@ -135,7 +125,7 @@
               </div>
             </div>
           </div>
-          
+
           <!-- 내용 3 -->
           <div id="hi-seasonEnf-e3">
             <!-- 이벤트 및 축제 사진 -->
@@ -175,7 +165,6 @@
               </div>
             </div>
           </div>
-
         </div>
         <div id="hi-seasonEnf-btnR" class="hi-seasonEnf-btn">&#10095;</div>
       </div>
@@ -223,74 +212,73 @@
         </div>
       </div>
     </section>
-      <!-- 추억 기록,리뷰 페이지 -->
-      <section class="jb-section2">
-        <!-- 제목 위 공백(그라데이션 적용을 위한) -->
-        <!-- 제목 -->
-        <div class="jb-subTit2">REVIEW</div>
-        <div class="jb-subTit3">소중한 추억들을 공유해보세요</div>
+    <!-- 추억 기록,리뷰 페이지 -->
+    <section class="jb-section2">
+      <!-- 제목 위 공백(그라데이션 적용을 위한) -->
+      <!-- 제목 -->
+      <div class="jb-subTit2">REVIEW</div>
+      <div class="jb-subTit3">소중한 추억들을 공유해보세요</div>
 
-        <!-- 봄 본문 -->
-        <div class="jb-reBox jb-reBox1">
-          <div class="jb-whiteBox">Season</div>
-          <div class="jb-springBox">Spring</div>
-          <div class="jb-spRevBox1"></div>
-          <div class="jb-spRevBox2"></div>
-          <div class="jb-spRevBox3"></div>
-          <div class="jb-spRevBox4"></div>
-          <button id="jb-springBtn">Spring</button>
-          <button id="jb-summerBtn">Summer</button>
-          <button id="jb-autumnBtn">Autumn</button>
-          <button id="jb-winterBtn">Winter</button>
-        </div>
+      <!-- 봄 본문 -->
+      <div class="jb-reBox jb-reBox1">
+        <div class="jb-whiteBox">Season</div>
+        <div class="jb-springBox">Spring</div>
+        <div class="jb-spRevBox1"></div>
+        <div class="jb-spRevBox2"></div>
+        <div class="jb-spRevBox3"></div>
+        <div class="jb-spRevBox4"></div>
+        <button id="jb-springBtn">Spring</button>
+        <button id="jb-summerBtn">Summer</button>
+        <button id="jb-autumnBtn">Autumn</button>
+        <button id="jb-winterBtn">Winter</button>
+      </div>
 
-        <!-- 여름 본문 -->
-        <div class="jb-reBox jb-reBox2">
-          <div class="jb-whiteBox">Season</div>
-          <div class="jb-summerBox">Summer</div>
-          <div class="jb-suRevBox1"></div>
-          <div class="jb-suRevBox2"></div>
-          <div class="jb-suRevBox3"></div>
-          <div class="jb-suRevBox4"></div>
-          <button id="jb-springBtn">Spring</button>
-          <button id="jb-summerBtn">Summer</button>
-          <button id="jb-autumnBtn">Autumn</button>
-          <button id="jb-winterBtn">Winter</button>
-        </div>
+      <!-- 여름 본문 -->
+      <div class="jb-reBox jb-reBox2">
+        <div class="jb-whiteBox">Season</div>
+        <div class="jb-summerBox">Summer</div>
+        <div class="jb-suRevBox1"></div>
+        <div class="jb-suRevBox2"></div>
+        <div class="jb-suRevBox3"></div>
+        <div class="jb-suRevBox4"></div>
+        <button id="jb-springBtn">Spring</button>
+        <button id="jb-summerBtn">Summer</button>
+        <button id="jb-autumnBtn">Autumn</button>
+        <button id="jb-winterBtn">Winter</button>
+      </div>
 
-        <!-- 가을 본문 -->
-        <div class="jb-reBox jb-reBox3">
-          <div class="jb-whiteBox">Season</div>
-          <div class="jb-autumnBox">Autumn</div>
-          <div class="jb-auRevBox1"></div>
-          <div class="jb-auRevBox2"></div>
-          <div class="jb-auRevBox3"></div>
-          <div class="jb-auRevBox4"></div>
-          <button id="jb-springBtn">Spring</button>
-          <button id="jb-summerBtn">Summer</button>
-          <button id="jb-autumnBtn">Autumn</button>
-          <button id="jb-winterBtn">Winter</button>
-        </div>
+      <!-- 가을 본문 -->
+      <div class="jb-reBox jb-reBox3">
+        <div class="jb-whiteBox">Season</div>
+        <div class="jb-autumnBox">Autumn</div>
+        <div class="jb-auRevBox1"></div>
+        <div class="jb-auRevBox2"></div>
+        <div class="jb-auRevBox3"></div>
+        <div class="jb-auRevBox4"></div>
+        <button id="jb-springBtn">Spring</button>
+        <button id="jb-summerBtn">Summer</button>
+        <button id="jb-autumnBtn">Autumn</button>
+        <button id="jb-winterBtn">Winter</button>
+      </div>
 
-        <!-- 겨울 본문 -->
-        <div class="jb-reBox jb-reBox4">
-          <div class="jb-whiteBox">Season</div>
-          <div class="jb-winterBox">Winter</div>
-          <div class="jb-wiRevBox1"></div>
-          <div class="jb-wirevBox2"></div>
-          <div class="jb-wiRevBox3"></div>
-          <div class="jb-wiRevBox4"></div>
-          <button id="jb-springBtn">Spring</button>
-          <button id="jb-summerBtn">Summer</button>
-          <button id="jb-autumnBtn">Autumn</button>
-          <button id="jb-winterBtn">Winter</button>
-        </div>
-      </section>
-          <!-- footer 부분 -->
+      <!-- 겨울 본문 -->
+      <div class="jb-reBox jb-reBox4">
+        <div class="jb-whiteBox">Season</div>
+        <div class="jb-winterBox">Winter</div>
+        <div class="jb-wiRevBox1"></div>
+        <div class="jb-wirevBox2"></div>
+        <div class="jb-wiRevBox3"></div>
+        <div class="jb-wiRevBox4"></div>
+        <button id="jb-springBtn">Spring</button>
+        <button id="jb-summerBtn">Summer</button>
+        <button id="jb-autumnBtn">Autumn</button>
+        <button id="jb-winterBtn">Winter</button>
+      </div>
+    </section>
+    <!-- footer 부분 -->
     <footer>
       <span>이 페이지는 학습 및 포트폴리오를 위해 제작되었습니다</span>
     </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
-
