--- a/sub2.html
+++ b/sub2.html
@@ -9,7 +9,18 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
-    <!-- 봄에 가면 좋은 관광지 --> 
+    <header>
+      <div class="sp1-nav">
+        <div class="sp1-imgLogo">BRAND</div>
+        <ul class="sp1-navMenu">
+          <li>한국의 봄</li>
+          <li>봄 대표 문화</li>
+          <li>갤러리</li>
+        </ul>
+        <div class="sp1-hamBar"></div>
+      </div>
+    </header>
+    <!-- 봄에 가면 좋은 관광지 -->
     <section class="sp2-section1">
       <!-- 제목 -->
       <div class="sp2-subTit1">봄에 가면 좋은 관광지</div>
