--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
           <ul class="jm-mainImgs">
             <li class="jm-mainImgFc"></li>
             <li class="jm-mainImg">
-              <div class="jm-mainImg-content">내용을 입력하세요</div>
+              <div class="jm-mainImg-content">Spring</div>
             </li>
             <li class="jm-mainImg">
-              <div class="jm-mainImg-content">내용을 입력하세요</div>
+              <div class="jm-mainImg-content">Summer</div>
             </li>
             <li class="jm-mainImg">
-              <div class="jm-mainImg-content">내용을 입력하세요</div>
+              <div class="jm-mainImg-content">Autumn</div>
             </li>
             <li class="jm-mainImg">
-              <div class="jm-mainImg-content">내용을 입력하세요</div>
+              <div class="jm-mainImg-content">Winter</div>
             </li>
           </ul>
         </div>
