file layout resetting

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
         <div class="hi-blankColor"></div>
         <div class="jm-topNavMenu">
           <ul>
-            <li><a href="#" class="hi-enBasicF">spring</a></li>
-            <li><a href="#">summer</a></li>
-            <li><a href="#">autumn</a></li>
-            <li><a href="#">winter</a></li>
+            <li>
+              <a href="./subpage/spring.html" class="hi-enBasicF">spring</a>
+            </li>
+            <li><a href="./subpage/summer.html">summer</a></li>
+            <li><a href="./subpage/autumn.html">autumn</a></li>
+            <li><a href="./style/winter.css">winter</a></li>
             `
           </ul>
           <ul>
