--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>봄</title>
-    <link rel="stylesheet" href="./style/spring.css" />
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../style/spring.css" />
   </head>
   <body>
     <header>
       <div class="sp1-nav">
-        <div class="sp1-imgLogo">BRAND</div>
+        <div class="sp1-imgLogo"><a href="../index.html">BRAND</a></div>
         <ul class="sp1-navMenu">
-          <li>한국의 봄</li>
-          <li>봄 대표 문화</li>
-          <li>갤러리</li>
+          <li><a href="./spring.html">한국의 봄</a></li>
+          <li><a href="./spring_sub1.html">봄날의 즐거움</a></li>
+          <li><a href="./spring_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
       </div>
@@ -86,6 +86,6 @@
     <footer class="sp1-ft">
       <span>footer</span>
     </footer>
-    <script src="./js/spring.js"></script>
+    <script src="../js/spring.js"></script>
   </body>
 </html>
