--- a/subpage/spring_sub1.html
+++ b/subpage/spring_sub1.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Subpage2</title>
-    <link rel="stylesheet" href="./style/sub2.css" />
-    <link rel="stylesheet" href="./style/style.css" />
+    <title>봄날의 즐거움</title>
+    <link rel="stylesheet" href="../style/spring.css" />
+    <link rel="stylesheet" href="../style/spring_sub.css" />
+    <link rel="stylesheet" href="../style/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
+    <header>
+      <div class="sp1-nav">
+        <div class="sp1-imgLogo"><a href="../index.html">BRAND</a></div>
+        <ul class="sp1-navMenu">
+          <li><a href="./spring.html">한국의 봄</a></li>
+          <li><a href="./spring_sub1.html">봄날의 즐거움</a></li>
+          <li><a href="./spring_sub2.html">갤러리</a></li>
+        </ul>
+        <div class="sp1-hamBar"></div>
+      </div>
+    </header>
     <!-- 봄에 가면 좋은 관광지 -->
     <section class="sp2-section1">
       <!-- 제목 -->
@@ -91,39 +103,5 @@
         </div>
       </div>
     </section>
-
-    <!-- 갤러리 -->
-    <section class="sp3-section1">
-      <!-- 제목 -->
-      <div class="sp3-subTit1">갤러리</div>
-
-      <!-- 본문 -->
-      <div class="sp3-galBox1">
-        <div class="sp3-galImgBox" data-index="1"></div>
-        <div class="sp3-galImgBox" data-index="2"></div>
-        <div class="sp3-galImgBox" data-index="3"></div>
-      </div>
-      <div class="sp3-galBox2">
-        <div class="sp3-galImgBox" data-index="4"></div>
-        <div class="sp3-galImgBox" data-index="5"></div>
-        <div class="sp3-galImgBox" data-index="6"></div>
-      </div>
-      <div class="sp3-galBox3">
-        <div class="sp3-galImgBox" data-index="7"></div>
-        <div class="sp3-galImgBox" data-index="8"></div>
-        <div class="sp3-galImgBox" data-index="9"></div>
-      </div>
-    </section>
-
-    <!-- 모달 -->
-    <div id="modal" class="modal">
-      <div class="modal-content">
-        <span id="closeBtn">&times;</span>
-        <div class="modal-img"></div>
-        <div class="modal-text">이미지에 대한 설명</div>
-      </div>
-    </div>
-
-    <script src="./js/sub2.js"></script>
   </body>
 </html>
