메인페이지 일부수정

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="jm-topNavMenu">
           <ul>
             <li>
-              <a href="./subpage/spring.html" class="hi-enBasicF">spring</a>
+              <a href="./subpage/spring.html" class="hi-enBasicF">Spring</a>
             </li>
-            <li><a href="./subpage/summer.html">summer</a></li>
-            <li><a href="./subpage/autumn.html">autumn</a></li>
-            <li><a href="./style/winter.css">winter</a></li>
+            <li><a href="./subpage/summer.html">Summer</a></li>
+            <li><a href="./subpage/autumn.html">Autumn</a></li>
+            <li><a href="./style/winter.css">Winter</a></li>
             `
           </ul>
           <ul>
@@ -63,19 +63,19 @@
       <div class="hi-seasonT">
         <div>
           <div id="hi-seasonImg" class="hi-seasonImg1"></div>
-          <div class="hi-seasonName">spring</div>
+          <div class="hi-seasonName">Spring</div>
         </div>
         <div>
           <div id="hi-seasonImg"></div>
-          <div class="hi-seasonName">summer</div>
+          <div class="hi-seasonName">Summer</div>
         </div>
         <div>
           <div id="hi-seasonImg"></div>
-          <div class="hi-seasonName">autumn</div>
+          <div class="hi-seasonName">Autumn</div>
         </div>
         <div>
           <div id="hi-seasonImg" class="hi-seasonImg2"></div>
-          <div class="hi-seasonName">winter</div>
+          <div class="hi-seasonName">Winter</div>
         </div>
       </div>
     </section>
@@ -94,7 +94,7 @@
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
               <div class="hi-seasonEnf-imgLabel">
-                <span>같은 시기 축제 찾아보기 > </span>
+                <span>같은 시기 축제 찾아보기 &nbsp; > </span>
               </div>
             </div>
             <!-- 이벤트 및 축제 내용 -->
@@ -226,10 +226,37 @@
       <div class="jb-reBox jb-reBox1">
         <div class="jb-whiteBox">Season</div>
         <div class="jb-springBox">Spring</div>
-        <div class="jb-spRevBox1"></div>
-        <div class="jb-spRevBox2"></div>
-        <div class="jb-spRevBox3"></div>
-        <div class="jb-spRevBox4"></div>
+        <div class="jb-spRevBox1">
+          <div class="hi-reBoxSp-reviewStory">
+            전라북도 고창군 아산면 선운사로 250
+          </div>
+          <div class="hi-reBoxSp-reviewStory">
+            “선운사에서 만개한 꽃무릇을 보니 마음이 정화되는 느낌이었어요. 붉은 꽃무릇이 사찰과 어우러져 정말 아름다웠습니다.”
+          </div>
+        </div>
+        <div class="jb-spRevBox2">
+          <div class="hi-reBoxSp-reviewStory">
+            전라남도 광양시 다압면 지막길 17
+          </div>
+          <div class="hi-reBoxSp-reviewStory">
+            “섬진강 매화마을은 봄의 향기가 가득한 곳이에요. 하얀 매화꽃이 만개한 모습을 보니 봄이 왔음을 실감했습니다.”          </div>
+          </div>
+        <div class="jb-spRevBox3">
+          <div class="hi-reBoxSp-reviewStory">
+            제주특별자치도 서귀포시 중문관광로 72번길 60
+          </div>
+          <div class="hi-reBoxSp-reviewStory">
+            “서귀포의 중문관광단지에서 봄꽃이 만개한 모습을 보니 마음이 설렜습니다. 따뜻한 봄바람과 함께하는 산책이 정말 좋았어요.”
+          </div>
+        </div>
+        <div class="jb-spRevBox4">
+          <div class="hi-reBoxSp-reviewStory">
+            경상남도 창원시 진해구 중원로타리
+          </div>
+          <div class="hi-reBoxSp-reviewStory">
+            “진해 군항제에서 벚꽃이 흐드러지게 핀 거리를 걷는 것은 잊을 수 없는 추억이 되었습니다. 봄의 향연을 만끽했어요.”
+          </div>
+        </div>
         <button id="jb-springBtn">Spring</button>
         <button id="jb-summerBtn">Summer</button>
         <button id="jb-autumnBtn">Autumn</button>
@@ -240,10 +267,38 @@
       <div class="jb-reBox jb-reBox2">
         <div class="jb-whiteBox">Season</div>
         <div class="jb-summerBox">Summer</div>
-        <div class="jb-suRevBox1"></div>
-        <div class="jb-suRevBox2"></div>
-        <div class="jb-suRevBox3"></div>
-        <div class="jb-suRevBox4"></div>
+        <div class="jb-suRevBox1">
+          <div class="hi-reBoxSu-reviewStory">
+            강원도 동해시 망상동 망상해변
+          </div>
+          <div class="hi-reBoxSu-reviewStory">
+            “망상해변의 맑고 푸른 바다에서 여름의 더위를 잊을 수 있었습니다. 가족과 함께한 물놀이가 즐거웠어요.”
+          </div>
+        </div>
+        <div class="jb-suRevBox2">
+          <div class="hi-reBoxSu-reviewStory">
+            부산광역시 해운대구 해운대해변로 264
+          </div>
+          <div class="hi-reBoxSu-reviewStory">
+            “해운대 해수욕장은 여름마다 찾는 곳이에요. 넓은 백사장과 시원한 바다가 매력적입니다.”
+          </div>
+        </div>
+        <div class="jb-suRevBox3">
+          <div class="hi-reBoxSu-reviewStory">
+            제주특별자치도 제주시 한림읍 협재리
+          </div>
+          <div class="hi-reBoxSu-reviewStory">
+            “협재 해수욕장의 에메랄드빛 바다는 정말 환상적이었어요. 여름 휴가로 강력 추천합니다.”
+          </div>
+        </div>
+        <div class="jb-suRevBox4">
+          <div class="hi-reBoxSu-reviewStory">
+            전라남도 여수시 돌산읍 우두리
+          </div>
+          <div class="hi-reBoxSu-reviewStory">
+            “여수 밤바다의 낭만적인 분위기는 여름 여행의 백미였습니다. 해상 케이블카에서 본 야경이 특히 인상적이었어요.”
+          </div>
+        </div>
         <button id="jb-springBtn">Spring</button>
         <button id="jb-summerBtn">Summer</button>
         <button id="jb-autumnBtn">Autumn</button>
@@ -254,10 +309,38 @@
       <div class="jb-reBox jb-reBox3">
         <div class="jb-whiteBox">Season</div>
         <div class="jb-autumnBox">Autumn</div>
-        <div class="jb-auRevBox1"></div>
-        <div class="jb-auRevBox2"></div>
-        <div class="jb-auRevBox3"></div>
-        <div class="jb-auRevBox4"></div>
+        <div class="jb-auRevBox1">
+          <div class="hi-reBoxAu-reviewStory">
+            전라북도 정읍시 내장산로 936
+          </div>
+          <div class="hi-reBoxAu-reviewStory">
+            “내장산의 단풍은 정말 화려하고 아름다웠습니다. 가을 산행의 묘미를 제대로 느낄 수 있었어요.”
+          </div>
+        </div>
+        <div class="jb-auRevBox2">
+          <div class="hi-reBoxAu-reviewStory">
+            강원도 강릉시 경포로 365
+          </div>
+          <div class="hi-reBoxAu-reviewStory">
+            “경포대의 가을 풍경은 잔잔한 호수와 어우러져 한 폭의 그림 같았습니다. 산책하기에 딱 좋은 곳이에요.”
+          </div>
+        </div>
+        <div class="jb-auRevBox3">
+          <div class="hi-reBoxAu-reviewStory">
+            경기도 연천군 중면 삼곶리
+          </div>
+          <div class="hi-reBoxAu-reviewStory">
+            “임진강 댑싸리공원의 가을 풍경은 정말 독특하고 아름다웠습니다. 붉게 물든 댑싸리가 인상적이었어요.”
+          </div>
+        </div>
+        <div class="jb-auRevBox4">
+          <div class="hi-reBoxAu-reviewStory">
+            경상북도 경주시 불국로 385
+          </div>
+          <div class="hi-reBoxAu-reviewStory">
+            “불국사의 가을 단풍은 고즈넉한 사찰 분위기와 어우러져 더욱 운치 있었습니다. 사진 찍기 좋은 장소에요.”
+          </div>
+        </div>
         <button id="jb-springBtn">Spring</button>
         <button id="jb-summerBtn">Summer</button>
         <button id="jb-autumnBtn">Autumn</button>
@@ -268,10 +351,38 @@
       <div class="jb-reBox jb-reBox4">
         <div class="jb-whiteBox">Season</div>
         <div class="jb-winterBox">Winter</div>
-        <div class="jb-wiRevBox1"></div>
-        <div class="jb-wirevBox2"></div>
-        <div class="jb-wiRevBox3"></div>
-        <div class="jb-wiRevBox4"></div>
+        <div class="jb-wiRevBox1">
+          <div class="hi-reBoxWi-reviewStory">
+            강원도 평창군 대관령면 횡계리
+          </div>
+          <div class="hi-reBoxWi-reviewStory">
+            “대관령 눈꽃축제에서 본 눈 조각들은 예술 작품 같았어요. 겨울 왕국에 온 듯한 기분이었습니다.”
+          </div>
+        </div>
+        <div class="jb-wirevBox2">
+          <div class="hi-reBoxWi-reviewStory">
+            강원도 강릉시 성산면
+          </div>
+          <div class="hi-reBoxWi-reviewStory">
+            “강릉의 경포호수는 겨울에 얼어붙어 색다른 매력을 보여줍니다. 주변을 산책하며 겨울 풍경을 즐겼어요.”
+          </div>
+        </div>
+        <div class="jb-wiRevBox3">
+          <div class="hi-reBoxWi-reviewStory">
+            제주특별자치도 제주시 1100로
+          </div>
+          <div class="hi-reBoxWi-reviewStory">
+            “한라산의 겨울 설경은 정말 장관이었습니다. 눈 덮인 산길을 오르는 경험이 특별했어요.”
+          </div>
+        </div>
+        <div class="jb-wiRevBox4">
+          <div class="hi-reBoxWi-reviewStory">
+            경기도 이천시 모가면 사실로 984
+          </div>
+          <div class="hi-reBoxWi-reviewStory">
+            “이천의 온천은 추운 겨울에 몸을 녹이기에 최적이었습니다. 피로가 싹 풀리는 느낌이었어요.”
+          </div>
+        </div>
         <button id="jb-springBtn">Spring</button>
         <button id="jb-summerBtn">Summer</button>
         <button id="jb-autumnBtn">Autumn</button>
@@ -281,6 +392,15 @@
     <!-- footer 부분 -->
     <footer>
       <span>이 페이지는 학습 및 포트폴리오를 위해 제작되었습니다</span>
+      <div class="hi-footerBox">
+        <div class="hi-figmaBox">
+          <a href="https://www.figma.com/design/599GWSnvNaoEHdQ0H3iW6G/TouristWebsite_Design?node-id=0-1&p=f&t=E0qoQzzdOEmYrA6V-0" target="_blank">
+            <img src="./img/icon/linkImg.png" alt="피그마 링크" class="hi-footerIcon">
+            <span class="hi-footerSubtxt">Page design with Figma</span>
+          </a>
+        </div>
+        <div class="hi-downBox"></div>
+      </div>
     </footer>
     <script src="./js/main.js"></script>
   </body>
