--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -38,6 +38,7 @@
       </div>
     </section>
     <section class="sp1-sec2">
+      <canvas class="sp1-canvas"></canvas>
       <div>
         <div class="sp1-sec2-title">02.01 ~ 05. 31</div>
         <div class="sp1-sec2-line"></div>
@@ -86,6 +87,7 @@
     <footer class="sp1-ft">
       <span>footer</span>
     </footer>
+    <script src="../js/petal.js"></script>
     <script src="../js/spring.js"></script>
   </body>
 </html>
