--- a/index.html
+++ b/index.html
@@ -62,20 +62,36 @@
       <!-- 본문 -->
       <div class="hi-seasonT">
         <div>
-          <div id="hi-seasonImg" class="hi-seasonImg1"></div>
-          <div class="hi-seasonName">Spring</div>
+          <a href="./subpage/spring.html">
+            <div id="hi-seasonImg" class="hi-seasonImg1">
+              <img src="./img/main/mainSection01SeasonSp.png" alt="springImg01">
+            </div>
+            <div class="hi-seasonName">Spring</div>
+          </a>
         </div>
         <div>
-          <div id="hi-seasonImg"></div>
-          <div class="hi-seasonName">Summer</div>
+          <a href="./subpage/summer.html">
+            <div id="hi-seasonImg">
+              <img src="./img/main/mainSection01SeasonSu.png" alt="summerImg01">
+            </div>
+            <div class="hi-seasonName">Summer</div>
+          </a>
         </div>
         <div>
-          <div id="hi-seasonImg"></div>
-          <div class="hi-seasonName">Autumn</div>
+          <a href="./subpage/autumn.html">
+            <div id="hi-seasonImg">
+              <img src="./img/main/mainSection01SeasonAu.png" alt="autumnImg01">
+            </div>
+            <div class="hi-seasonName">Autumn</div>
+          </a>
         </div>
         <div>
-          <div id="hi-seasonImg" class="hi-seasonImg2"></div>
-          <div class="hi-seasonName">Winter</div>
+          <a href="./subpage/winter.html">
+            <div id="hi-seasonImg" class="hi-seasonImg2">
+              <img src="./img/main/mainSection01SeasonWi.png" alt="winterImg01">
+            </div>
+            <div class="hi-seasonName">Winter</div>
+          </a>
         </div>
       </div>
     </section>
@@ -94,13 +110,13 @@
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
               <div class="hi-seasonEnf-imgLabel">
-                <span>같은 시기 축제 찾아보기 &nbsp; > </span>
+                <a href="./subpage/spring_sub1.html">같은 시기 축제 찾아보기 &nbsp; &nbsp; > </a>
               </div>
             </div>
             <!-- 이벤트 및 축제 내용 -->
             <div class="hi-seasonEnf-txtB">
-              <div class="hi-seasonEnf-txtTop">신나는 여름 축제</div>
-              <div class="hi-seasonEnf-txtName">2019<br />SUMMER FESTIVAL</div>
+              <div class="hi-seasonEnf-txtTop">즐거운 봄 축제</div>
+              <div class="hi-seasonEnf-txtName">2019<br />SPRING FESTIVAL</div>
               <div class="hi-seasonEnf-term">2019.07.01 - 2019.07.20</div>
               <div class="hi-seasonEnf-ex">
                 뜨거운 여름, 시원한 즐거움이 가득한 축제!<br />
@@ -114,7 +130,7 @@
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
               <div class="hi-seasonEnf-imgLabel">
-                <span>같은 시기 축제 찾아보기 > </span>
+                <a href="./subpage/summer_sub1.html">같은 시기 축제 찾아보기 &nbsp; &nbsp; > </a>
               </div>
             </div>
             <!-- 이벤트 및 축제 내용 -->
@@ -134,13 +150,13 @@
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
               <div class="hi-seasonEnf-imgLabel">
-                <span>같은 시기 축제 찾아보기 > </span>
+                <a href="./subpage/autumn_sub1.html">같은 시기 축제 찾아보기 &nbsp; &nbsp; > </a>
               </div>
             </div>
             <!-- 이벤트 및 축제 내용 -->
             <div class="hi-seasonEnf-txtB">
-              <div class="hi-seasonEnf-txtTop">신나는 여름 축제</div>
-              <div class="hi-seasonEnf-txtName">2021<br />SUMMER FESTIVAL</div>
+              <div class="hi-seasonEnf-txtTop">풍요로운 가을 축제</div>
+              <div class="hi-seasonEnf-txtName">2021<br />AUTUMN FESTIVAL</div>
               <div class="hi-seasonEnf-term">2019.07.01 - 2019.07.20</div>
               <div class="hi-seasonEnf-ex">
                 뜨거운 여름, 시원한 즐거움이 가득한 축제!<br />
@@ -154,13 +170,13 @@
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
               <div class="hi-seasonEnf-imgLabel">
-                <span>같은 시기 축제 찾아보기 > </span>
+                <a href="./subpage/winter_sub1.html">같은 시기 축제 찾아보기 &nbsp; &nbsp; > </a>
               </div>
             </div>
             <!-- 이벤트 및 축제 내용 -->
             <div class="hi-seasonEnf-txtB">
-              <div class="hi-seasonEnf-txtTop">신나는 여름 축제</div>
-              <div class="hi-seasonEnf-txtName">2022<br />SUMMER FESTIVAL</div>
+              <div class="hi-seasonEnf-txtTop">빛나는 겨울 축제</div>
+              <div class="hi-seasonEnf-txtName">2022<br />WINTER FESTIVAL</div>
               <div class="hi-seasonEnf-term">2019.07.01 - 2019.07.20</div>
               <div class="hi-seasonEnf-ex">
                 뜨거운 여름, 시원한 즐거움이 가득한 축제!<br />
@@ -181,35 +197,51 @@
       <div class="jb-mainImgBox">
         <div class="jb-mainImgWrapper">
           <div>
-            <div class="jb-mainImg"></div>
+            <div class="jb-mainImg">
+              <img src="./img/main/SaveTour-Sp-Jin.png">
+            </div>
             <div class="jb-springName">Spring</div>
           </div>
           <div>
-            <div class="jb-mainImg"></div>
+            <div class="jb-mainImg">
+              <img src="./img/main/SaveTour-Sp-G.png">
+            </div>
             <div class="jb-springName">Spring</div>
           </div>
           <div>
-            <div class="jb-mainImg"></div>
+            <div class="jb-mainImg">
+              <img src="./img/main/SaveTour-Su-B.png">
+            </div>
             <div class="jb-summerName">Summer</div>
           </div>
           <div>
-            <div class="jb-mainImg"></div>
+            <div class="jb-mainImg">
+              <img src="./img/main/SaveTour-Su-J.png">
+            </div>
             <div class="jb-summerName">Summer</div>
           </div>
           <div>
-            <div class="jb-mainImg"></div>
+            <div class="jb-mainImg">
+              <img src="./img/main/SaveTour-Au-Bul.png">
+            </div>
             <div class="jb-autumnName">Autumn</div>
           </div>
           <div>
-            <div class="jb-mainImg"></div>
+            <div class="jb-mainImg">
+              <img src="./img/main/SaveTour-Au-Im.png">
+            </div>
             <div class="jb-autumnName">Autumn</div>
           </div>
           <div>
-            <div class="jb-mainImg"></div>
+            <div class="jb-mainImg">
+              <img src="./img/main/SaveTour-Wi-gang.png">
+            </div>
             <div class="jb-winterName">Winter</div>
           </div>
           <div>
-            <div class="jb-mainImg"></div>
+            <div class="jb-mainImg">
+              <img src="./img/main/SaveTour-Wi-J.jpg">
+            </div>
             <div class="jb-winterName">Winter</div>
           </div>
         </div>
@@ -389,6 +421,96 @@
         <button id="jb-winterBtn">Winter</button>
       </div>
     </section>
+    <!-- 메뉴 -->
+    <section class="hi-mainMenu-web">
+      <div>
+        <div class="hi-menuBoxTop">
+          <div>Brand</div><span>Menu</span><div id="hi-menuBox-Close"><img src="./img/icon/close.png" alt="close menu"></div>
+        </div>
+        <div class="hi-menuBox">
+          <div class="hi-menuSub">
+            <div><a href="./subpage/spring.html">Spring</a></div>
+            <div>
+                <ul>
+                    <li><a href="./subpage/spring.html">한국의 봄</a></li>
+                    <li><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></li>
+                    <li><a href="./subpage/spring_sub2.html">갤러리</a></li>
+                </ul>
+            </div>
+          </div>
+          <!-- 여름 -->
+          <div class="hi-menuSub">
+            <div><a href="./subpage/summer.html">Summer</a></div>
+            <div>
+              <ul>
+                  <li><a href="./subpage/summer.html">한국의 여름</a></li>
+                  <li><a href="./subpage/summer_sub1.html">여름의 즐거움</a></li>
+                  <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- 가을 -->
+          <div class="hi-menuSub">
+            <div><a href="./subpage/autumn.html">Autumn</a></div>
+            <div>
+              <ul>
+                  <li><a href="./subpage/autumn.html">한국의 가을</a></li>
+                  <li><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></li>
+                  <li><a href="./subpage/autumn_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- 겨울 -->
+          <div class="hi-menuSub">
+            <div><a href="./subpage/winter.html">Winter</a></div>
+            <div>
+              <ul>
+                  <li><a href="./subpage/spring.html">한국의 겨울</a></li>
+                  <li><a href="./subpage/spring.html">겨울날의 즐거움</a></li>
+                  <li><a href="./subpage/spring.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 모바일 버전 메뉴 -->
+    <section class="hi-mainMenu-app">
+      <div class="hi-mainMenu-appBox">
+        <div class="hi-mainMenu-appBoxtop">
+          <div>Brand</div><span>Menu</span><div id="hi-accordionMenu-Close"><img src="./img/icon/close.png" alt="close menu"></div>
+        </div>
+        <!-- 봄 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Spring</div>
+        <div class="hi-appMenu">
+            <p><a href="./subpage/spring.html">한국의 봄</a></p>
+            <p><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></p>
+            <p><a href="./subpage/spring_sub2.html">갤러리</a></p>
+        </div>
+        <!-- 여름 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
+        <div class="hi-appMenu">
+            <p><a href="./subpage/summer.html">한국의 여름</a></p>
+            <p><a href="./subpage/summer_sub1.html">여름의 즐거움</a></p>
+            <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
+        </div>
+        <!-- 가을 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Autumn</div>
+        <div class="hi-appMenu">
+            <p><a href="./subpage/autumn.html">한국의 가을</a></p>
+            <p><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></p>
+            <p><a href="./subpage/autumn_sub2.html">갤러리</a></p>
+        </div>
+        <!-- 겨울 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
+        <div class="hi-appMenu">
+            <p><a href="./subpage/spring.html">한국의 겨울</a></p>
+            <p><a href="./subpage/spring.html">겨울날의 즐거움</a></p>
+            <p><a href="./subpage/spring.html">갤러리</a></p>
+        </div>
+      </div>
+    </section>
+    
     <!-- footer 부분 -->
     <footer>
       <span>이 페이지는 학습 및 포트폴리오를 위해 제작되었습니다</span>
