--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
       </div>
     </header>
 
+    <!-- top btn -->
+    <div id="hi-topBtn">
+      <img src="./img/icon/topBtn.png" alt="topBtn">
+    </div>
+
     <!-- 시즌 투어 section -->
     <section class="hi-section">
       <!-- 제목 -->
