--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- top btn -->
     <div id="hi-topBtn">
-      <img src="./img/icon/topBtn.png" alt="topBtn">
+      <img src="./img/icon/topBtn.png" alt="topBtn" />
     </div>
 
     <!-- 시즌 투어 section -->
@@ -69,7 +69,10 @@
         <div>
           <a href="./subpage/spring.html">
             <div id="hi-seasonImg" class="hi-seasonImg1">
-              <img src="./img/main/mainSection01SeasonSp.png" alt="springImg01">
+              <img
+                src="./img/main/mainSection01SeasonSp.png"
+                alt="springImg01"
+              />
             </div>
             <div class="hi-seasonName">Spring</div>
           </a>
@@ -77,7 +80,10 @@
         <div>
           <a href="./subpage/summer.html">
             <div id="hi-seasonImg">
-              <img src="./img/main/mainSection01SeasonSu.png" alt="summerImg01">
+              <img
+                src="./img/main/mainSection01SeasonSu.png"
+                alt="summerImg01"
+              />
             </div>
             <div class="hi-seasonName">Summer</div>
           </a>
@@ -85,7 +91,10 @@
         <div>
           <a href="./subpage/autumn.html">
             <div id="hi-seasonImg">
-              <img src="./img/main/mainSection01SeasonAu.png" alt="autumnImg01">
+              <img
+                src="./img/main/mainSection01SeasonAu.png"
+                alt="autumnImg01"
+              />
             </div>
             <div class="hi-seasonName">Autumn</div>
           </a>
@@ -93,7 +102,10 @@
         <div>
           <a href="./subpage/winter.html">
             <div id="hi-seasonImg" class="hi-seasonImg2">
-              <img src="./img/main/mainSection01SeasonWi.png" alt="winterImg01">
+              <img
+                src="./img/main/mainSection01SeasonWi.png"
+                alt="winterImg01"
+              />
             </div>
             <div class="hi-seasonName">Winter</div>
           </a>
@@ -115,7 +127,9 @@
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
               <div class="hi-seasonEnf-imgLabel">
-                <a href="./subpage/spring_sub1.html">같은 시기 축제 찾아보기 &nbsp; &nbsp; > </a>
+                <a href="./subpage/spring_sub1.html"
+                  >같은 시기 축제 찾아보기 &nbsp; &nbsp; >
+                </a>
               </div>
             </div>
             <!-- 이벤트 및 축제 내용 -->
@@ -135,7 +149,9 @@
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
               <div class="hi-seasonEnf-imgLabel">
-                <a href="./subpage/summer_sub1.html">같은 시기 축제 찾아보기 &nbsp; &nbsp; > </a>
+                <a href="./subpage/summer_sub1.html"
+                  >같은 시기 축제 찾아보기 &nbsp; &nbsp; >
+                </a>
               </div>
             </div>
             <!-- 이벤트 및 축제 내용 -->
@@ -155,7 +171,9 @@
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
               <div class="hi-seasonEnf-imgLabel">
-                <a href="./subpage/autumn_sub1.html">같은 시기 축제 찾아보기 &nbsp; &nbsp; > </a>
+                <a href="./subpage/autumn_sub1.html"
+                  >같은 시기 축제 찾아보기 &nbsp; &nbsp; >
+                </a>
               </div>
             </div>
             <!-- 이벤트 및 축제 내용 -->
@@ -175,7 +193,9 @@
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
               <div class="hi-seasonEnf-imgLabel">
-                <a href="./subpage/winter_sub1.html">같은 시기 축제 찾아보기 &nbsp; &nbsp; > </a>
+                <a href="./subpage/winter_sub1.html"
+                  >같은 시기 축제 찾아보기 &nbsp; &nbsp; >
+                </a>
               </div>
             </div>
             <!-- 이벤트 및 축제 내용 -->
@@ -203,49 +223,49 @@
         <div class="jb-mainImgWrapper">
           <div>
             <div class="jb-mainImg">
-              <img src="./img/main/SaveTour-Sp-Jin.png">
+              <img src="./img/main/SaveTour-Sp-Jin.png" />
             </div>
             <div class="jb-springName">Spring</div>
           </div>
           <div>
             <div class="jb-mainImg">
-              <img src="./img/main/SaveTour-Sp-G.png">
+              <img src="./img/main/SaveTour-Sp-G.png" />
             </div>
             <div class="jb-springName">Spring</div>
           </div>
           <div>
             <div class="jb-mainImg">
-              <img src="./img/main/SaveTour-Su-B.png">
+              <img src="./img/main/SaveTour-Su-B.png" />
             </div>
             <div class="jb-summerName">Summer</div>
           </div>
           <div>
             <div class="jb-mainImg">
-              <img src="./img/main/SaveTour-Su-J.png">
+              <img src="./img/main/SaveTour-Su-J.png" />
             </div>
             <div class="jb-summerName">Summer</div>
           </div>
           <div>
             <div class="jb-mainImg">
-              <img src="./img/main/SaveTour-Au-Bul.png">
+              <img src="./img/main/SaveTour-Au-Bul.png" />
             </div>
             <div class="jb-autumnName">Autumn</div>
           </div>
           <div>
             <div class="jb-mainImg">
-              <img src="./img/main/SaveTour-Au-Im.png">
+              <img src="./img/main/SaveTour-Au-Im.png" />
             </div>
             <div class="jb-autumnName">Autumn</div>
           </div>
           <div>
             <div class="jb-mainImg">
-              <img src="./img/main/SaveTour-Wi-gang.png">
+              <img src="./img/main/SaveTour-Wi-gang.png" />
             </div>
             <div class="jb-winterName">Winter</div>
           </div>
           <div>
             <div class="jb-mainImg">
-              <img src="./img/main/SaveTour-Wi-J.jpg">
+              <img src="./img/main/SaveTour-Wi-J.jpg" />
             </div>
             <div class="jb-winterName">Winter</div>
           </div>
@@ -268,7 +288,8 @@
             전라북도 고창군 아산면 선운사로 250
           </div>
           <div class="hi-reBoxSp-reviewStory">
-            “선운사에서 만개한 꽃무릇을 보니 마음이 정화되는 느낌이었어요. 붉은 꽃무릇이 사찰과 어우러져 정말 아름다웠습니다.”
+            “선운사에서 만개한 꽃무릇을 보니 마음이 정화되는 느낌이었어요. 붉은
+            꽃무릇이 사찰과 어우러져 정말 아름다웠습니다.”
           </div>
         </div>
         <div class="jb-spRevBox2">
@@ -276,14 +297,17 @@
             전라남도 광양시 다압면 지막길 17
           </div>
           <div class="hi-reBoxSp-reviewStory">
-            “섬진강 매화마을은 봄의 향기가 가득한 곳이에요. 하얀 매화꽃이 만개한 모습을 보니 봄이 왔음을 실감했습니다.”          </div>
+            “섬진강 매화마을은 봄의 향기가 가득한 곳이에요. 하얀 매화꽃이 만개한
+            모습을 보니 봄이 왔음을 실감했습니다.”
           </div>
+        </div>
         <div class="jb-spRevBox3">
           <div class="hi-reBoxSp-reviewStory">
             제주특별자치도 서귀포시 중문관광로 72번길 60
           </div>
           <div class="hi-reBoxSp-reviewStory">
-            “서귀포의 중문관광단지에서 봄꽃이 만개한 모습을 보니 마음이 설렜습니다. 따뜻한 봄바람과 함께하는 산책이 정말 좋았어요.”
+            “서귀포의 중문관광단지에서 봄꽃이 만개한 모습을 보니 마음이
+            설렜습니다. 따뜻한 봄바람과 함께하는 산책이 정말 좋았어요.”
           </div>
         </div>
         <div class="jb-spRevBox4">
@@ -291,7 +315,8 @@
             경상남도 창원시 진해구 중원로타리
           </div>
           <div class="hi-reBoxSp-reviewStory">
-            “진해 군항제에서 벚꽃이 흐드러지게 핀 거리를 걷는 것은 잊을 수 없는 추억이 되었습니다. 봄의 향연을 만끽했어요.”
+            “진해 군항제에서 벚꽃이 흐드러지게 핀 거리를 걷는 것은 잊을 수 없는
+            추억이 되었습니다. 봄의 향연을 만끽했어요.”
           </div>
         </div>
         <button id="jb-springBtn">Spring</button>
@@ -309,7 +334,8 @@
             강원도 동해시 망상동 망상해변
           </div>
           <div class="hi-reBoxSu-reviewStory">
-            “망상해변의 맑고 푸른 바다에서 여름의 더위를 잊을 수 있었습니다. 가족과 함께한 물놀이가 즐거웠어요.”
+            “망상해변의 맑고 푸른 바다에서 여름의 더위를 잊을 수 있었습니다.
+            가족과 함께한 물놀이가 즐거웠어요.”
           </div>
         </div>
         <div class="jb-suRevBox2">
@@ -317,7 +343,8 @@
             부산광역시 해운대구 해운대해변로 264
           </div>
           <div class="hi-reBoxSu-reviewStory">
-            “해운대 해수욕장은 여름마다 찾는 곳이에요. 넓은 백사장과 시원한 바다가 매력적입니다.”
+            “해운대 해수욕장은 여름마다 찾는 곳이에요. 넓은 백사장과 시원한
+            바다가 매력적입니다.”
           </div>
         </div>
         <div class="jb-suRevBox3">
@@ -325,7 +352,8 @@
             제주특별자치도 제주시 한림읍 협재리
           </div>
           <div class="hi-reBoxSu-reviewStory">
-            “협재 해수욕장의 에메랄드빛 바다는 정말 환상적이었어요. 여름 휴가로 강력 추천합니다.”
+            “협재 해수욕장의 에메랄드빛 바다는 정말 환상적이었어요. 여름 휴가로
+            강력 추천합니다.”
           </div>
         </div>
         <div class="jb-suRevBox4">
@@ -333,7 +361,8 @@
             전라남도 여수시 돌산읍 우두리
           </div>
           <div class="hi-reBoxSu-reviewStory">
-            “여수 밤바다의 낭만적인 분위기는 여름 여행의 백미였습니다. 해상 케이블카에서 본 야경이 특히 인상적이었어요.”
+            “여수 밤바다의 낭만적인 분위기는 여름 여행의 백미였습니다. 해상
+            케이블카에서 본 야경이 특히 인상적이었어요.”
           </div>
         </div>
         <button id="jb-springBtn">Spring</button>
@@ -347,35 +376,31 @@
         <div class="jb-whiteBox">Season</div>
         <div class="jb-autumnBox">Autumn</div>
         <div class="jb-auRevBox1">
+          <div class="hi-reBoxAu-reviewStory">전라북도 정읍시 내장산로 936</div>
           <div class="hi-reBoxAu-reviewStory">
-            전라북도 정읍시 내장산로 936
-          </div>
-          <div class="hi-reBoxAu-reviewStory">
-            “내장산의 단풍은 정말 화려하고 아름다웠습니다. 가을 산행의 묘미를 제대로 느낄 수 있었어요.”
+            “내장산의 단풍은 정말 화려하고 아름다웠습니다. 가을 산행의 묘미를
+            제대로 느낄 수 있었어요.”
           </div>
         </div>
         <div class="jb-auRevBox2">
+          <div class="hi-reBoxAu-reviewStory">강원도 강릉시 경포로 365</div>
           <div class="hi-reBoxAu-reviewStory">
-            강원도 강릉시 경포로 365
-          </div>
-          <div class="hi-reBoxAu-reviewStory">
-            “경포대의 가을 풍경은 잔잔한 호수와 어우러져 한 폭의 그림 같았습니다. 산책하기에 딱 좋은 곳이에요.”
+            “경포대의 가을 풍경은 잔잔한 호수와 어우러져 한 폭의 그림
+            같았습니다. 산책하기에 딱 좋은 곳이에요.”
           </div>
         </div>
         <div class="jb-auRevBox3">
+          <div class="hi-reBoxAu-reviewStory">경기도 연천군 중면 삼곶리</div>
           <div class="hi-reBoxAu-reviewStory">
-            경기도 연천군 중면 삼곶리
-          </div>
-          <div class="hi-reBoxAu-reviewStory">
-            “임진강 댑싸리공원의 가을 풍경은 정말 독특하고 아름다웠습니다. 붉게 물든 댑싸리가 인상적이었어요.”
+            “임진강 댑싸리공원의 가을 풍경은 정말 독특하고 아름다웠습니다. 붉게
+            물든 댑싸리가 인상적이었어요.”
           </div>
         </div>
         <div class="jb-auRevBox4">
+          <div class="hi-reBoxAu-reviewStory">경상북도 경주시 불국로 385</div>
           <div class="hi-reBoxAu-reviewStory">
-            경상북도 경주시 불국로 385
-          </div>
-          <div class="hi-reBoxAu-reviewStory">
-            “불국사의 가을 단풍은 고즈넉한 사찰 분위기와 어우러져 더욱 운치 있었습니다. 사진 찍기 좋은 장소에요.”
+            “불국사의 가을 단풍은 고즈넉한 사찰 분위기와 어우러져 더욱 운치
+            있었습니다. 사진 찍기 좋은 장소에요.”
           </div>
         </div>
         <button id="jb-springBtn">Spring</button>
@@ -393,23 +418,22 @@
             강원도 평창군 대관령면 횡계리
           </div>
           <div class="hi-reBoxWi-reviewStory">
-            “대관령 눈꽃축제에서 본 눈 조각들은 예술 작품 같았어요. 겨울 왕국에 온 듯한 기분이었습니다.”
+            “대관령 눈꽃축제에서 본 눈 조각들은 예술 작품 같았어요. 겨울 왕국에
+            온 듯한 기분이었습니다.”
           </div>
         </div>
         <div class="jb-wirevBox2">
+          <div class="hi-reBoxWi-reviewStory">강원도 강릉시 성산면</div>
           <div class="hi-reBoxWi-reviewStory">
-            강원도 강릉시 성산면
-          </div>
-          <div class="hi-reBoxWi-reviewStory">
-            “강릉의 경포호수는 겨울에 얼어붙어 색다른 매력을 보여줍니다. 주변을 산책하며 겨울 풍경을 즐겼어요.”
+            “강릉의 경포호수는 겨울에 얼어붙어 색다른 매력을 보여줍니다. 주변을
+            산책하며 겨울 풍경을 즐겼어요.”
           </div>
         </div>
         <div class="jb-wiRevBox3">
+          <div class="hi-reBoxWi-reviewStory">제주특별자치도 제주시 1100로</div>
           <div class="hi-reBoxWi-reviewStory">
-            제주특별자치도 제주시 1100로
-          </div>
-          <div class="hi-reBoxWi-reviewStory">
-            “한라산의 겨울 설경은 정말 장관이었습니다. 눈 덮인 산길을 오르는 경험이 특별했어요.”
+            “한라산의 겨울 설경은 정말 장관이었습니다. 눈 덮인 산길을 오르는
+            경험이 특별했어요.”
           </div>
         </div>
         <div class="jb-wiRevBox4">
@@ -417,7 +441,8 @@
             경기도 이천시 모가면 사실로 984
           </div>
           <div class="hi-reBoxWi-reviewStory">
-            “이천의 온천은 추운 겨울에 몸을 녹이기에 최적이었습니다. 피로가 싹 풀리는 느낌이었어요.”
+            “이천의 온천은 추운 겨울에 몸을 녹이기에 최적이었습니다. 피로가 싹
+            풀리는 느낌이었어요.”
           </div>
         </div>
         <button id="jb-springBtn">Spring</button>
@@ -430,17 +455,21 @@
     <section class="hi-mainMenu-web">
       <div>
         <div class="hi-menuBoxTop">
-          <div>Brand</div><span>Menu</span><div id="hi-menuBox-Close"><img src="./img/icon/close.png" alt="close menu"></div>
+          <div>Brand</div>
+          <span>Menu</span>
+          <div id="hi-menuBox-Close">
+            <img src="./img/icon/close.png" alt="close menu" />
+          </div>
         </div>
         <div class="hi-menuBox">
           <div class="hi-menuSub">
             <div><a href="./subpage/spring.html">Spring</a></div>
             <div>
-                <ul>
-                    <li><a href="./subpage/spring.html">한국의 봄</a></li>
-                    <li><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></li>
-                    <li><a href="./subpage/spring_sub2.html">갤러리</a></li>
-                </ul>
+              <ul>
+                <li><a href="./subpage/spring.html">한국의 봄</a></li>
+                <li><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></li>
+                <li><a href="./subpage/spring_sub2.html">갤러리</a></li>
+              </ul>
             </div>
           </div>
           <!-- 여름 -->
@@ -448,9 +477,9 @@
             <div><a href="./subpage/summer.html">Summer</a></div>
             <div>
               <ul>
-                  <li><a href="./subpage/summer.html">한국의 여름</a></li>
-                  <li><a href="./subpage/summer_sub1.html">여름의 즐거움</a></li>
-                  <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
+                <li><a href="./subpage/summer.html">한국의 여름</a></li>
+                <li><a href="./subpage/summer_sub1.html">여름의 즐거움</a></li>
+                <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -459,9 +488,9 @@
             <div><a href="./subpage/autumn.html">Autumn</a></div>
             <div>
               <ul>
-                  <li><a href="./subpage/autumn.html">한국의 가을</a></li>
-                  <li><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></li>
-                  <li><a href="./subpage/autumn_sub2.html">갤러리</a></li>
+                <li><a href="./subpage/autumn.html">한국의 가을</a></li>
+                <li><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></li>
+                <li><a href="./subpage/autumn_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -470,9 +499,9 @@
             <div><a href="./subpage/winter.html">Winter</a></div>
             <div>
               <ul>
-                  <li><a href="./subpage/spring.html">한국의 겨울</a></li>
-                  <li><a href="./subpage/spring.html">겨울날의 즐거움</a></li>
-                  <li><a href="./subpage/spring.html">갤러리</a></li>
+                <li><a href="./subpage/spring.html">한국의 겨울</a></li>
+                <li><a href="./subpage/spring.html">겨울날의 즐거움</a></li>
+                <li><a href="./subpage/spring.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -483,46 +512,57 @@
     <section class="hi-mainMenu-app">
       <div class="hi-mainMenu-appBox">
         <div class="hi-mainMenu-appBoxtop">
-          <div>Brand</div><span>Menu</span><div id="hi-accordionMenu-Close"><img src="./img/icon/close.png" alt="close menu"></div>
+          <div>Brand</div>
+          <span>Menu</span>
+          <div id="hi-accordionMenu-Close">
+            <img src="./img/icon/close.png" alt="close menu" />
+          </div>
         </div>
         <!-- 봄 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Spring</div>
         <div class="hi-appMenu">
-            <p><a href="./subpage/spring.html">한국의 봄</a></p>
-            <p><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></p>
-            <p><a href="./subpage/spring_sub2.html">갤러리</a></p>
+          <p><a href="./subpage/spring.html">한국의 봄</a></p>
+          <p><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></p>
+          <p><a href="./subpage/spring_sub2.html">갤러리</a></p>
         </div>
         <!-- 여름 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
         <div class="hi-appMenu">
-            <p><a href="./subpage/summer.html">한국의 여름</a></p>
-            <p><a href="./subpage/summer_sub1.html">여름의 즐거움</a></p>
-            <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
+          <p><a href="./subpage/summer.html">한국의 여름</a></p>
+          <p><a href="./subpage/summer_sub1.html">여름의 즐거움</a></p>
+          <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 가을 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Autumn</div>
         <div class="hi-appMenu">
-            <p><a href="./subpage/autumn.html">한국의 가을</a></p>
-            <p><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></p>
-            <p><a href="./subpage/autumn_sub2.html">갤러리</a></p>
+          <p><a href="./subpage/autumn.html">한국의 가을</a></p>
+          <p><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></p>
+          <p><a href="./subpage/autumn_sub2.html">갤러리</a></p>
         </div>
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
         <div class="hi-appMenu">
-            <p><a href="./subpage/spring.html">한국의 겨울</a></p>
-            <p><a href="./subpage/spring.html">겨울날의 즐거움</a></p>
-            <p><a href="./subpage/spring.html">갤러리</a></p>
+          <p><a href="./subpage/spring.html">한국의 겨울</a></p>
+          <p><a href="./subpage/spring.html">겨울날의 즐거움</a></p>
+          <p><a href="./subpage/spring.html">갤러리</a></p>
         </div>
       </div>
     </section>
-    
+
     <!-- footer 부분 -->
     <footer>
       <span>이 페이지는 학습 및 포트폴리오를 위해 제작되었습니다</span>
       <div class="hi-footerBox">
         <div class="hi-figmaBox">
-          <a href="https://www.figma.com/design/599GWSnvNaoEHdQ0H3iW6G/TouristWebsite_Design?node-id=0-1&p=f&t=E0qoQzzdOEmYrA6V-0" target="_blank">
-            <img src="./img/icon/linkImg.png" alt="피그마 링크" class="hi-footerIcon">
+          <a
+            href="https://www.figma.com/design/599GWSnvNaoEHdQ0H3iW6G/TouristWebsite_Design?node-id=0-1&p=f&t=E0qoQzzdOEmYrA6V-0"
+            target="_blank"
+          >
+            <img
+              src="./img/icon/linkImg.png"
+              alt="피그마 링크"
+              class="hi-footerIcon"
+            />
             <span class="hi-footerSubtxt">Page design with Figma</span>
           </a>
         </div>
