--- a/subpage/spring_sub1.html
+++ b/subpage/spring_sub1.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,minimum-scale=1.0"
+    />
     <title>봄날의 즐거움</title>
     <link rel="stylesheet" href="../style/spring.css" />
     <link rel="stylesheet" href="../style/spring_sub.css" />
